[tool.poetry]
name = "jobboard-app"
version = "0.1.0"
description = ""
authors = ["HiRurgLipay <sl38lipay@gmail.com>"]
readme = "README.md"
packages = [{include = "jobboard_app"}]

[tool.poetry.dependencies]
python = "3.10"
django = "4.2.3"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
dacite = "1.8.1"
deptry = "0.11.0"
pylint = "2.17.4"
mypy = "1.4.1"
black = "23.7.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
